Fix: Scrollable main element if too large

--- a/static/main.css
+++ b/static/main.css
@@ -38,6 +38,8 @@ main {
 	box-shadow: 5px 5px 30px var(--color-low);
 	padding: 20px;
 	width: clamp(300px, 80%, 600px);
+	max-height: 100svh;
+	overflow-y: auto;
 	border: 2px var(--color) solid;
 }
 form {
